Melhoria 1: Isolando Testes Funcionais

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ geckodriver.log
 virtualenv
 __pycache__
 *.pyc
+superlists/__init__.py
+superlists/settings.py
+superlists/urls.py
+superlists/wsgi.py
